--- a/DB/1.md
+++ b/DB/1.md
@@ -1,1 +1,4 @@
 
+SELECT
+데이터베이스 내의 테이블에서 원하는 정보를 추출하는 명령
+![image](https://github.com/user-attachments/assets/bb803f31-bbae-447d-b9aa-569f6223dc4b)
