Update 02. 데이터 쿼리 - SELECT.md

--- a/DB/02. 데이터 쿼리 - SELECT.md
+++ b/DB/02. 데이터 쿼리 - SELECT.md
@@ -11,6 +11,10 @@ SELECT
 테이블에서 데이터를 조회
 
 예제 1) 테이블의 모든 행과 열에서 데이터를 조회
+|Query|Result|
+|---|---|
+|![image](https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531)|![image](https://github.com/user-attachments/assets/66360128-7db3-42d9-936c-736ee1f5dc61)|
+
 
 
 
