Update 02. 데이터 쿼리 - SELECT.md

--- a/DB/02. 데이터 쿼리 - SELECT.md
+++ b/DB/02. 데이터 쿼리 - SELECT.md
@@ -14,7 +14,7 @@ SELECT
 |Query|Result|
 |---|---|
 |![image](https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531)|![image](https://github.com/user-attachments/assets/66360128-7db3-42d9-936c-736ee1f5dc61)|
-
+|<img src="https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531" width="200" height="200"/>|<img src="https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531" width="200" height="200"/>|
 
 
 
