Update 02. 데이터 쿼리 - SELECT.md

--- a/DB/02. 데이터 쿼리 - SELECT.md
+++ b/DB/02. 데이터 쿼리 - SELECT.md
@@ -14,10 +14,11 @@ SELECT
 |Query|Result|
 |---|---|
 |![image](https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531)|![image](https://github.com/user-attachments/assets/66360128-7db3-42d9-936c-736ee1f5dc61)|
-|<img src="https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531" width="500" height="200"/>|<img src="https://github.com/user-attachments/assets/6cbf578b-423e-45e1-bb27-911fd579b531" width="500" height="200"/>|
 
-
-
+예제 2) 특정 열에서 데이터 선택
+|Query|Result|
+|-|-|
+|![image](https://github.com/user-attachments/assets/b71b5995-2d1f-439d-b6a4-b4f8832b33bc)|![image](https://github.com/user-attachments/assets/05d4ce3e-aa11-49df-baf5-20d2fe6a9ef3)|
 
 
 
