Update 02. 데이터 쿼리 - SELECT.md

--- a/DB/02. 데이터 쿼리 - SELECT.md
+++ b/DB/02. 데이터 쿼리 - SELECT.md
@@ -13,16 +13,12 @@ SELECT
 예제 1) 테이블의 모든 행과 열에서 데이터를 조회
 |Query|Result|
 |---|---|
-|
-SELECT *<br/>
-FROM employees;
-|![image](https://github.com/user-attachments/assets/66360128-7db3-42d9-936c-736ee1f5dc61)|
+|SELECT * <br/>FROM employees;|![image](https://github.com/user-attachments/assets/66360128-7db3-42d9-936c-736ee1f5dc61)|
 
 예제 2) 특정 열에서 데이터 선택
 |Query|Result|
 |-|-|
-|
-SELECT * employee_id, first_name<br/>
+|SELECT * employee_id, first_name<br/>
 FROM employees;
 |![image](https://github.com/user-attachments/assets/05d4ce3e-aa11-49df-baf5-20d2fe6a9ef3)|
 
