Update 02. 데이터 쿼리 - SELECT.md

--- a/DB/02. 데이터 쿼리 - SELECT.md
+++ b/DB/02. 데이터 쿼리 - SELECT.md
@@ -1,12 +1,3 @@
-SQL Syntax(SQL 구문)
-
-
-
-
-세미콜론(;)은 쿼리의 일부가 아니며 쿼리를 구분하는데 사용한다. 예를 들어, 두 개의 SQL 문을 실행하는 경우 ;을 사용해서 구분해야 한다.
-SQL은 대소문자를 구분하지 않는다. 따라서 SELECT와 select는 같다.
-SQL 키워드에는 대문자를 사용하고 테이블과 칼럼의 이름과 같은 식별자에는 소문자를 사용하는 룰을 사용하고 이 룰이 SQL을 더 일기 쉽게 한다.
-
 SELECT
 테이블에서 데이터를 조회
 
@@ -27,10 +18,27 @@ SELECT
   <th>Query</th><th>Result</th>
   <tr>
     <td>
-      SELECT employee_id, first_name<br/>
+      SELECT employee_id, first_name <br/>
       FROM employees;
     </td>
     <td><img src="https://github.com/user-attachments/assets/05d4ce3e-aa11-49df-baf5-20d2fe6a9ef3"/></td>
   </tr>
 </table>
 
+예제 3) 간단 계산 수행
+<table>
+  <th>Query</th><th>Result</th>
+  <tr>
+    <td>
+      SELECT first_name, salary, salary * 1.05 <br/>
+      FROM employees;
+    </td>
+    <td><img src="https://github.com/user-attachments/assets/90a58b37-933e-4a2b-a759-254165c01267"/></td>
+  </tr>
+</table>
+SQL은 salary * 1.05라는 표현식을 칼럼헤더(열이름)로 사용한다.<br/>
+
+
+정리<br/>
+SELECT라는 SQL문을 사용해서 테이블에서 데이터를 조회한다.<br/>
+"SELECT 열 목록 FROM 테이블" 형식으로 질의한다.<br/>
