Update 03. 데이터 정렬 - ORDER BY.md

--- a/DB/03. 데이터 정렬 - ORDER BY.md
+++ b/DB/03. 데이터 정렬 - ORDER BY.md
@@ -1,1 +1,75 @@
+내용 요약<br/>
+ORDER BY 절을 사용하여 결과값을 오름차순 또는 내림차순으로 정렬
+
+ORDER BY 절이란?<br/>
+SELECT 문의 선택적 절이다. 이 ORDER BY 절을 사용하면 절에서 반환된 행을 하나 이상의 기준으로 오름차순 또는 내림차순으로 정렬할 수 있다.
+
+기본 사용법<br/>
+<table>
+  <td>
+    SELECT select_list <br/>
+    FROM table_name <br/>
+    ORDER BY sort_expression [ASC|DESC];
+  </td>
+  <td>
+    1. ORDER BY 절을 FROM 절 뒤에 배치시킨다. DB는 FROM -> SELECT -> ORDER BY 순으로 평가한다.<br/>
+    2. 정렬 표현식은 ORDER BY 절 뒤에 명시한다. 정렬 표현식은 정렬의 기준이 되는 조건이다.<br/>
+    3. 옵션을 사용해서 오름차순(ASC), 내림차순(DESC)을 표현한다. 지정하지 않으면 오름차순이 기본값.
+  </td>
+</table>
+
+정렬 조건을 여러개 사용할 수도 있다.
+<table>
+  <td>
+    SELECT select_list <br/>
+    FROM table_name <br/>
+    ORDER BY sort_expression1 [ASC|DESC], sort_expression2 [ASC|DESC];
+  </td>
+  <td>
+    여러 표현식을 기준으로 결과값을 정렬할 수 있다. 이 경우 쉼표(,)를 사용하여 정렬 표현식을 구분해야 한다.<br/>
+    이 구문에서 첫 번째 표현식을 기준으로 정렬한 뒤 나온 결과값을 두 번째 표현식으로 정렬한다.
+  </td>
+</table>
+
+<hr/>
+예제1) 한 열의 값 정렬<br/>
+<table>
+  <td>
+    SELECT * <br/>
+    FROM employees <br/>
+    ORDER BY first_name;
+  </td>
+  <td><img src="https://github.com/user-attachments/assets/6fec06c9-ea3e-42ef-8af6-1757785e2f79" /></td>
+</table>
+
+예제2) 여러 열의 값 정렬<br/>
+<table>
+  <td>
+    SELECT * <br/>
+    FROM employees <br/>
+    ORDER BY first_name, last_name DESC;
+  </td>
+  <td><img src="https://github.com/user-attachments/assets/07ffc9eb-9454-4372-9bcd-dd7f2148548c"/></td>
+</table>
+
+예제3) 숫자 별로 정렬<br/>
+<table>
+  <td>
+    SELECT * <br/>
+    FROM employees <br/>
+    ORDER BY salary DESC;
+  </td>
+  <td><img src="https://github.com/user-attachments/assets/a8b54a4c-7c64-413e-a068-dc5f35240361"/></td>
+</table>
+
+예제4) 날짜 별로 정렬(회사 입사가 늦은 순으로)<br/>
+<table>
+  <td>
+    SELECT * <br/>
+    FROM employees <br/>
+    ORDER BY hire_date DESC;
+  </td>
+  <td><img src="https://github.com/user-attachments/assets/95e7bd15-6202-41f4-baaf-3696acb82402"/></td>
+</table>
+
 
