--- a/DB/05. 조건식 - CASE.md
+++ b/DB/05. 조건식 - CASE.md
@@ -1,11 +1,11 @@
 내용 요약<br/>
 CASE 표현식을 사용하여 SQL 문장에 로직을 추가
 
-CASE 표현식이란?
-조건 목록을 평가하고 가능한 결과를 반환한다.<br/>
-단순 CASE(simple CASE)와 검색된 CASE(searched CASE)가 존재.<br/>
+CASE 표현식이란?<br/>
+조건 목록을 평가하고 가능한 결과를 반환한다. 단순 CASE(simple CASE)와 검색된 CASE(searched CASE)가 존재.<br/>
 절(SELECT, ORDER BY, HAVING)과 명령문(SELECT, DELETE, UPDATE)에서 CASE 표현식을 사용할 수 있다.
 
+기본 사용<br/>
 
 <hr/>
 
