Update 05. 조건식 - CASE.md

--- a/DB/05. 조건식 - CASE.md
+++ b/DB/05. 조건식 - CASE.md
@@ -6,9 +6,70 @@ CASE 표현식이란?<br/>
 절(SELECT, ORDER BY, HAVING)과 명령문(SELECT, DELETE, UPDATE)에서 CASE 표현식을 사용할 수 있다.
 
 기본 사용법<br/>
+<table>
+<td>
+<pre lang="sql">
+CASE
+  WHEN 조건1 THEN result1
+  WHEN 조건2 THEN result2
+  ELSE result_else
+END
+</pre>
+</td>
+<td>
 
+단순 CASE 표현식<br/>
+같음 연산자(=)를 사용하여 표현식을 조건과 같은지 비교한다.
+
+검색 CASE 표현식<br/>
+보다 큼(>), 보다 작음(<) 등과 같은 비교 연산자를 사용하여 표현식을 조건과 같은지 비교한다.
+
+공통사항<br/>
+표현식이 WHERE 절의 표현식(조건)과 일치하지 않으면 ELSE 절의 결과(이 예에선 result_else)를 반환한다.<br/>
+ELSE 절이 생략된 경우에 표현식과 일치하는 WHEN 절이 없으면 NULL을 반환한다.
+</td>
+</table>
 
 <hr/>
 
+예제1) 단순 CASE 표현식 <br/>
+현재 연도가 2000년이라고 가정하고 CASE 표현식을 사용하여 직원의 근무 기념일을 가져오기
+<table>
+<td>
+<pre lang="sql">
+SELECT first_name, hire_date,
+  CASE (2000 - YEAR(hire_date))
+    WHEN 1 THEN '1 year'
+    WHEN 3 THEN '3 years'
+    WHEN 5 THEN '5 years'
+        ....
+    WHEN 30 THEN '30 years'
+  END AS aniversary
+FROM employees
+ORDER BY first_name;
+</pre>
+</td>
+<td><img src="https://github.com/user-attachments/assets/c37ecdcf-9c3d-45ea-8166-cb0dfbf002ba"/></td>
+</table>
+YEAR 함수는 직원이 회사에 입사한 연도를 반환하는 함수라고 가정한다. 제대로 실습하려면 CAST(strftime('%Y',hire_date) AS INTEGER)와 같이 바꿔줘야 한다.<br/>
+현재 연도(2000)에서 직원이 회사에 입사한 연도를 뺴서 직원이 회사에 근무한 연수를 구하고 표현식(1, 3, 5...)과 비교한다. <br/>
+근속 연도가 이 숫자와 일치하지 않으면 CASE 식은 NULL을 반환한다.<br/><br/>
+
+예제2) 검색된 CASE 표현식 <br/>
+<table>
+<td>
+<pre lang="sql">
+SELECT first_name, 
+  CASE
+    WHEN salary < 3000 THEN 'Low'
+    WHEN salary >= 3000 AND salary <= 5000 THEN 'Average'
+    WHEN salary > 5000 THEN 'High'
+  END AS evaluation
+FROM employees;
+</pre>
+</td>
+<td><img src="https://github.com/user-attachments/assets/2abed385-2237-4a0b-8d41-fcc82f7bc609"/></td>
+</table>
+급여가 3000 미만인 경우 CASE 표현식은 "Low"를 반환, 급여가 3000~5000인 경우 "Average"를 반환, 급여가 5000보다 크다면 "High"를 반환.
 
 
