Update 04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md

--- a/DB/04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md
+++ b/DB/04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md
@@ -1,4 +1,51 @@
-DISTINC
+DISTINCT<br/>
+내용 요약<br/>
+DISTINCT 연산자를 사용하여 결과 집합에서 중복을 제거
+
+DISTINCT 연산자란?
+결과 집합에서 중복 행을 제거
+
+기본 사용법<br/>
+<table>
+<td>
+<pre lang="sql">
+SELECT DISTINCT column1, column2
+FROM table;
+</pre>
+</td>
+<td>
+
+</td>
+</table>
+
+<hr/>
+예제1) DISTINCT - 한 열에서 사용<br/>
+<table>
+<td>
+<pre lang="sql">
+SELECT DISTINCT salary
+FROM employees
+ORDER BY salary DESC;
+</pre>
+</td>
+<td>
+  
+</td>
+</table>
+
+예제2) DISTINCT - 여러 열에서 사용<br/>
+<table>
+<td>
+<pre lang="sql">
+SELECT DISTINCT job_id, salary
+FROM employees
+ORDER BY job_id, salary DESC;
+</pre>
+</td>
+<td>
+  
+</td>
+</table>
 
 <hr/>
 
