Update 04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md

--- a/DB/04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md
+++ b/DB/04. 데이터 필터링-DISTINCT, WHERE, AND, IN, LIKE, ETC.md
@@ -49,6 +49,25 @@ ORDER BY job_id, salary DESC;
 
 <hr/>
 
-LIMIT
+LIMIT<br/>
+내용 요약<br/>
+LIMIT 절을 사용하여 쿼리에서 반환되는 행 수를 제한
+
+LIMIT이란?<br/>
+SELECT 문에서 반환되는 행 수를 제한
+
+기본 사용법<br/>
+<table>
+<td>
+<pre lang="sql">
+SELECT column
+FROM table
+LIMIT row_count;
+</pre>
+</td>
+<td>
+
+</td>
+</table>
 
 <hr/>
