Update 사용자 정의 데이터 형식.md

--- a/DB/사용자 정의 데이터 형식.md
+++ b/DB/사용자 정의 데이터 형식.md
@@ -1,1 +1,62 @@
+사용자 정의 테이블 형식<br/>
+
+필요성 이해<br/>
+MEMBER 테이블 존재, 해당 테이블에 데이터 삽입 시에 사용자 정의 테이블 형식을 사용하는 것과 사용하지 않는 경우 비교
+<table>
+<td>ID</td><td>Name</td><td>Mail</td>
+</table>
+
+<hr/>
+
+1. 사용자 정의 테이블 형식 사용 안함<br/>
+1-1) 저장 프로시저 생성 <br/>
+CREATE PROCEDURE usp_InsertMember <br/>
+  @Id int <br/>
+  @Name int <br/>
+  @Mail int <br/>
+AS <br/>
+  SET NOCOUNT ON <br/>
+  INSERT INTO Member(ID, NAME, MAIL) VALUES(@Id, @Name, @Mail) <br/>
+  SET NOCOUNT OFF <br/>
+GO <br/>
+
+1-2) 회원 정보 입력 (저장 프로시저 호출)<br/>
+EXECUTE usp_InsertMember 1, 1, 1 <br/>
+EXECUTE usp_InsertMember 2, 2, 2 <br/>
+EXECUTE usp_InsertMember 3, 3, 3 <br/>
+GO <br/>
+
+<hr/>
+
+2. 사용자 정의 테이블 형식을 사용<br/>
+2-1) 사용자 정의 테이블 형식 만들기
+CREATE TYPE MemberTableType AS TABLE
+(
+Id int
+Name int
+Mail int
+)
+
+2-2) 저장 프로시저 생성(사용자 정의 테이블 형식을 사용하는)
+CREATE PROCEDURE usp_InsertMember2
+  @MemList MemberTableType READONLY
+AS
+  SET NOCOUNT ON
+  INSERT INTO Member2(Id, Name, Mail)
+  SELECT * FROM @MemList
+GO
+
+2-3) 회원 정보 입력 (저장 프로시저 호출) <br/>
+
+
+
+
+
+
+
+
+
+
+
+
 
