Update 04. 데이터 지역성.md

--- a/C++/성능 최적화/04. 데이터 지역성.md
+++ b/C++/성능 최적화/04. 데이터 지역성.md
@@ -3,18 +3,106 @@
 요약<br/>
 CPU 캐시를 최대한 활용할 수 있도록 데이터를 배치해 메모리 접근 속도를 높여 성능을 향상시킨다.<br/>
 
-SW 아키텍처의 전형적인 특징 하나가 추상화다. 
-C++에서 인터페이스를 사용하려면 포인터나 레퍼런스를 통해 객체에 접근해야 한다. 하지만 포인터를 쓰게 되면 메모리를 여기저기 찾아가야 하므로
-데이터 지역성 패턴을 통해서 피하고자했던 캐시 미스가 발생한다. 인터페이스를 쓰게 되면 가상 함수 호출도 불가피하다. 가상 함수를 호출하려면 CPU가
-객체의 vtable(가상 테이블)에서 실제로 호출할 함수 포인터를 찾아야 한다. 이 과정에서 또 다시 포인터 추적이 일어나 캐시 미스가 생길 수 있다.
-따라서 데이터 지역성과 추상화 사이의 절충이 필요하다.
+SW 아키텍처의 전형적인 특징 하나가 추상화다. 객체지향 언어에서는 거의 언제나 인터페이스를 사용하여 디커플링한다.<br/>
+C++에서 인터페이스를 사용하려면 포인터나 레퍼런스를 통해 객체에 접근해야 한다.<br/> 
+하지만 포인터를 쓰게 되면 메모리를 여기저기 찾아가야 하므로 데이터 지역성 패턴을 통해서 피하고자했던 캐시 미스가 발생한다. 인터페이스를 쓰게 되면 가상 함수 호출도 불가피하다. <br/>
+가상 함수를 호출하려면 CPU가 객체의 vtable(가상 테이블)에서 실제로 호출할 함수 포인터를 찾아야 한다. 이 과정에서 또 다시 포인터 추적이 일어나 캐시 미스가 생길 수 있다.
+${\textsf{\color{red}따라서 데이터 지역성과 추상화 사이의 절충이 필요하다.}}$
 
 <hr/>
-1. 연속 배열(Contiguous arrays)<br/>
 
+데이터 지역성을 사용한 최적화 방법과 예시<br/>
 
+방법1) 연속 배열(Contiguous arrays) 사용<br/>
 
+~~~cpp
+// 게임 개체는 각 컴포넌트(AI, 물리, 렌더링)에 몇몇 상태와 이를 업데이트하기 위한 메서드가 들어 있다.
+// 게임 개체
+class GameEntity {
+public:
+  GameEntity(AIComp* ai, PhysicsComp* physics, RenderComp* render) :
+    : _ai(ai), _physics(physics), _render(render) {}
+private:
+  AIComp* _ai;
+  PhysicsComp* _physics;
+  RenderComp* _render;
+};
 
+// 컴포넌트들
+class AIComp {
+public:
+  void Update() {}
+};
+class PhysicsComp {
+public:
+  void Update() {}
+};
+class RenderComp {
+public:
+  void Update() {}
+};
+
+// 월드에 있는 모든 개체는 거대한 포인터 배열 하나로 관리.
+// 매 루프 시에 모든 개체의, 모든 컴포넌트를 업데이트.
+while (!gameOver) {
+  for (int i = 0; i < numEntities; i++)
+    entities[i]->_ai->Update();
+  for (int i = 0; i < numEntities; i++)
+    entities[i]->_physics->Update();
+  for (int i = 0; i < numEntities; i++)
+    entities[i]->_render->Update();
+}
+~~~
+문제점<br/>
+이 코드의 문제가 없어보이지만 CPU 캐시와 관련하여 생각하면 이러한 문제가 있다.
+1. 게임 개체가 배열에 포인터로 저장되어 있어서, 배열 값에 접근할 때마다 포인터를 따라가면서 캐시 미스가 발생한다.
+2. 게임 개체는 컴포넌트를 포인터로 들고 있어서 다시 한 번 캐시 미스가 발생.
+3. 컴포넌트를 업데이트한다.
+4. 해당 과정을 반복한다.
+
+컴포넌트 하나를 업데이트할 때마다 캐시미스가 발생할 가능성이 높다. 도식화하면 아래와 같다.
+![image](https://github.com/user-attachments/assets/51725a3c-ae3c-487a-8561-c6bd78c04426)
+
+개선법<br/>
+배열에 포인터가 아니라 객체를 넣어서 개선<br/>
+배열에 포인터가 아니라 객체가 들어갔기 때문에 바로 다음 객체에 접근할 수 있다.<br/>
+
+~~~cpp
+AIComp* aiComps = new AIComps[];
+PhysicsComp* physicsComps = new PhysicsComps[];
+RenderComp* renderComps = new RenderComps[];
+
+while (!gameOver) {
+  for (int i = 0; i < numEntities; ++i)
+    aiComps[i].Update();
+  for (int i = 0; i < numEntities; ++i)
+    physicsComps[i].Update();
+  for (int i = 0; i < numEntities; ++i)
+    renderComps[i].Update();
+}
+~~~
+도식화하면 아래와 같으며 개선전보다 업데이트 루프가 50배 빨라진다고 한다.
+![image](https://github.com/user-attachments/assets/d4ad0975-a4c0-4daf-96c9-fe4a6c84377f)
+
+<hr/>
+
+방법2) 정렬된 데이터
+~~~cpp
+// 모든 파티클을 연속적인 하나의 배열에 두고, 이를 ParticleSystem이라는 관리 클래스로 래핑.
+class Particle {
+public:
+  void Update();
+};
+class ParticleSystem {
+public:
+  ParticleSystem() : _num(0) {}
+
+  void Update();
+private:
+  int _num;
+  Particle _particles[10'0000];
+};
+~~~
 
 출처 : https://velog.io/@strurao/%EA%B2%8C%EC%9E%84-%EC%B5%9C%EC%A0%81%ED%99%94-%ED%8C%A8%ED%84%B4-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%A7%80%EC%97%AD%EC%84%B1
 
