--- a/DB/인덱스.md
+++ b/DB/인덱스.md
@@ -1,5 +1,34 @@
-SQL에서 인덱스는 데이터베이스 테이블의 검색 성능을 향상시키기 위해 사용된다. 
-인덱스를 생성하면 데이터베이스는 테이블의 특정 열에 대한 빠른 검색을 수행할 수 있다.
-다음은 SQL에서 인덱스를 생성하고 사용하는 예제이다.
 
-1. 기본 인덱스 생성
+인덱스
+검색(SELECT) 속도를 높이기 위해서 사용한다.
+
+설명 및 필요성
+SQL에서 데이터는 내부적으로 아무런 순서 없이 저장된다. 이러한 상황에서 원하는 데이터를 찾을 때 해당 테이블의 데이터를 처음부터 끝까지 조회해서 찾게 되고 이를 테이블 스캔 또는 풀 스캔이라고 한다. 인덱스는 목차라고 생각하면 쉽게 이해할 수 있다. 데이터를 찾을 때 처음부터 찾는 것이 아니라
+목차 보고 대략적인 위치를 찾아서 해당 부분을 찾는다.
+
+장점
+검색 성능 향상
+단점
+추가 저장 공간 필요, 쓰기 작업(INSERT, DELETE, UPDATE) 성능 저하, 유지 보수 부담
+
+사용 방법
+인덱스를 생성하고 SELECT를 할 시에 WHERE이나 JOIN에 인덱스가 생성되어 있는 칼럼을 명시하면 자동으로 인덱스를 사용해서 조회
+(사용하지 않을 수도 있다. DB가 인덱스를 사용하는 것이 더 비효율적이라고 판단하면 사용X, 즉, 인간이 명시해서 사용하는 것이 아니라 자동으로 사용된다.)
+
+인덱스 종류
+클러스터 인덱스
+테이블 당 1개만 허용되며 PK(Primary Key) 설정 시 그 칼럼은 자동으로 클러스터 인덱스가 만들어진다.
+인덱스 자체의 리프 페이지가 곧 데이터이다. 즉, 테이블 자체가 인덱스이다.(따로 공간을 할당해서 인덱스를 만들지 않음)
+
+논클러스터 인덱스
+
+인덱스 생성
+~~~sql
+CREATE INDEX indexName ON tableName(columnName, ....);
+~~~
+
+
+결론
+
+<hr/>
+
