--- a/DB/인덱스.md
+++ b/DB/인덱스.md
@@ -1,26 +1,85 @@
 
-인덱스
-검색(SELECT) 속도를 높이기 위해서 사용한다.
+인덱스<br/>
+검색(SELECT) 속도를 높이기 위해서 사용한다.<br/>
 
-설명 및 필요성
-SQL에서 데이터는 내부적으로 아무런 순서 없이 저장된다. 이러한 상황에서 원하는 데이터를 찾을 때 해당 테이블의 데이터를 처음부터 끝까지 조회해서 찾게 되고 이를 테이블 스캔 또는 풀 스캔이라고 한다. 인덱스는 목차라고 생각하면 쉽게 이해할 수 있다. 데이터를 찾을 때 처음부터 찾는 것이 아니라
-목차 보고 대략적인 위치를 찾아서 해당 부분을 찾는다.
+설명 및 필요성<br/>
+SQL에서 데이터는 내부적으로 아무런 순서 없이 저장된다. 이러한 상황에서 원하는 데이터를 찾을 때 해당 테이블의 데이터를 처음부터 끝까지 조회해서 찾게 되고 이를 테이블 스캔 또는 풀 스캔이라고 한다. <br/>
+책의 원하는 페이지를 펴기 위해서 목차를 통해서 접근을 하듯 데이터를 찾는 것을 효율적으로 하기 위해서 인덱스를 사용한다.
+다만 사용에 장단점은 존재한다.
 
-장점
-검색 성능 향상
-단점
-추가 저장 공간 필요, 쓰기 작업(INSERT, DELETE, UPDATE) 성능 저하, 유지 보수 부담
+장점<br/>
+검색 성능 향상<br/>
+단점<br/>
+추가 저장 공간 필요, 쓰기 작업(INSERT, DELETE, UPDATE) 성능 저하, 유지 보수 부담<br/>
+
+인덱스 종류와 이해<br/>
+세 가지 경우를 통해서 이해를 해보자(인덱스 사용X, 클러스터 인덱스, 논클러스터 인덱스)<br/>
+~~~sql
+--테이블 생성
+CREATE TABLE member {
+  id int
+  name varchar(255)
+}
+--데이터 삽입
+INSERT INTO member VALUES(6, '삼성');
+INSERT INTO member VALUES(2, '엘지');
+INSERT INTO member VALUES(4, '현대');
+INSERT INTO member VALUES(3, '기아');
+INSERT INTO member VALUES(11, '라인');
+INSERT INTO member VALUES(1, '쿠팡');
+INSERT INTO member VALUES(5, '배민');
+INSERT INTO member VALUES(7, '네이버');
+INSERT INTO member VALUES(12, '당근');
+INSERT INTO member VALUES(11, '토스');
+INSERT INTO member VALUES(9, '넥슨');
+INSERT INTO member VALUES(8, '카카오');
+~~~
+
+1) 인덱스 사용X<br/>
+인덱스가 설정되지 않은 테이블에 데이터를 넣으면 정렬되지 않고 넣은 순으로 들어가며 아래와 같다.<br/>
+이러한 상황에서 원하는 행을 찾으려면 처음부터 끝까지 순차적으로 접근해서 데이터를 찾는다.<br/>
+![image](https://github.com/user-attachments/assets/a7485606-5f34-4b05-8a2d-c3ef47685462)
+
+2) 클러스터 인덱스<br/>
+위의 인덱스 사용X 테이블에서 id 칼럼을 클러스터 인덱스를 적용한다.<br/>
+해당 칼럼 값을 기준으로 실제 테이블의 데이터가 정렬되며 root node가 생성된다.<br/>
+![image](https://github.com/user-attachments/assets/96c4db2a-4d74-4f65-802e-02e32695e6ef)<br/>
+root node에는 클러스터 인덱스 데이터와 해당 데이터의 주소가 저장이 된다.<br/>
+root node의 정보를 통해 실제 데이터 검색 시 빠르게 찾을 수 있도록 한다.<br/>
+
+3) 논클러스터 인덱스<br/>
+위의 인덱스 사용X 테이블에서 name 컬럼에 논클러스터 인덱스 적용<br/>
+인덱스 관리를 위해 root node, leaf node 구조가 만들어진다.
+leaf node에는 인덱스를 적용한 칼럼(name)이 정렬되고 해당 칼럼이 속한 행 주소를 보관하고 있다.<br/>
+"기아" 데이터를 기준으로 설명하면 '기아'는 가나다 순으로 맨 앞에 위치하기에 leaf node에서 첫 번째로 정렬되어 있으며
+해당 칼럼이 실제 데이터 페이지 주소 1000의 4번째에 위치한다.<br/>
+![image](https://github.com/user-attachments/assets/1d3492db-6d72-4cd6-bea8-5f9812036a95)
+
+논클러스터 인덱스에서 검색 예제("현대"데이터 조회 시)<br/>
+~~~sql
+SELECT id, name FROM member WHERE name = "현대"
+~~~
+![image](https://github.com/user-attachments/assets/a561942a-dae3-4006-863c-c578621972f2)
+인덱스 페이지인 leaf node에서 현대를 검색한다.<br/>
+위에서 얻은 데이터 주소 '1000 + 3'으로 실제 데이터를 검색해서 원하는 결과값을 가져온다.<br/>
+
+
+논클러스터 인덱스 요약:<br/>
+인덱스를 위한 저장공간이 별도로 필요하다.
+실제 테이블이 정렬되지 않고 인덱스에서 정렬된다.
+
+
+참고 : https://iliveinseoul.tistory.com/entry/%ED%81%B4%EB%9F%AC%EC%8A%A4%ED%84%B0-%EC%9D%B8%EB%8D%B1%EC%8A%A4%EC%99%80-%EB%84%8C-%ED%81%B4%EB%9F%AC%EC%8A%A4%ED%84%B0-%EC%9D%B8%EB%8D%B1%EC%8A%A4-%ED%8A%B9%EC%A7%95-%EC%9B%90%EB%A6%AC
+
+
+
+
+
 
 사용 방법
 인덱스를 생성하고 SELECT를 할 시에 WHERE이나 JOIN에 인덱스가 생성되어 있는 칼럼을 명시하면 자동으로 인덱스를 사용해서 조회
 (사용하지 않을 수도 있다. DB가 인덱스를 사용하는 것이 더 비효율적이라고 판단하면 사용X, 즉, 인간이 명시해서 사용하는 것이 아니라 자동으로 사용된다.)
 
-인덱스 종류
-클러스터 인덱스
-테이블 당 1개만 허용되며 PK(Primary Key) 설정 시 그 칼럼은 자동으로 클러스터 인덱스가 만들어진다.
-인덱스 자체의 리프 페이지가 곧 데이터이다. 즉, 테이블 자체가 인덱스이다.(따로 공간을 할당해서 인덱스를 만들지 않음)
-
-논클러스터 인덱스
 
 인덱스 생성
 ~~~sql
