--- a/Unreal Engine/플러그인.md
+++ b/Unreal Engine/플러그인.md
@@ -1,17 +1,37 @@
 # 플러그인?
-
+https://unrealstudy.blogspot.com/2014/08/ue4.html <br/>
 
 # 플러그인 추가
-자동 추가(마켓 플레이스에서 다운로드 후 추가), 수동 추가(깃허브에서 소스코드 다운 후 추가) <br/>
-이 두가지 방법이 있다. 전자의 방법이 더 쉽다. 하지만 전자의 방법으로 할 수 없는 경우가 많다. <br/>
+자동으로 추가하는 방법과 수동으로 추가하는 방법이 있다. <br/>
+자동 추가 - 에픽 게임즈 마켓 플레이스에서 다운로드 <br/>
+수동 추가 - 깃허브와 같은 사이트에서 소스코드 다운로드 후 수동으로 추가 <br/>
+에픽 게임즈 마켓 플레이스에서 등록되어 있는 코드를 자동으로 추가하는 것이 편하며, 마켓 플레이스에 없을 경우 수동으로 추가한다. <br/>
 
 #### 자동 추가
 
-#### 수동 추가
-주의점 : 수동으로 설치하는 거고 버전이라든가 여러 호환성을 직접 확인 후 추가해야한다.
+#### 수동 추가 
+주의점 : 수동으로 설치하는 것이며 버전이라든가 여러 호환성을 직접 확인 후 추가해야한다. <br/>
 
-프로젝트 루트 폴더에서 Plugins 폴더 생성
-해당 폴더에 플러그인 다운로드 (.uplugin 파일이 있어야 한다.)
+1) 프로젝트 루트 폴더에서 Plugins 폴더 생성 <br/>
+![image](https://github.com/user-attachments/assets/457122b8-a6aa-4b71-8436-517b9a97ac6d) <br/>
+
+2) 해당 폴더에 플러그인 다운로드 <br/>
+깃허브에서 소스 코드 다운로드 후 압축 해제를 프로젝트 루트 폴더/Plugins/ 경로에 해준다. <br/>
+다운 받은 소스코드에 .uplugin 파일이 있는지 확인한다. <br/>
+![image](https://github.com/user-attachments/assets/e26cfbb8-62ed-4e83-88f0-a13da0982d37) <br/>
+
+4) 프로젝트 실행하여 빌드 <br/>
+![image](https://github.com/user-attachments/assets/7acdab2a-3b26-42e2-8d0d-9d0dc60e2fbb)
+
+3-1) 플러그인이 추가되었는지 확인
+![image](https://github.com/user-attachments/assets/7e2810e6-5235-480a-ab54-450921d902af)
+
 
 # 플러그인 생성
+위에서 추가하는 플러그인들을 직접 생성하는 방법이다. <br/>
+
+
+
+# 출처
+https://homveloper.github.io/ue4/ue4-import_plugin/ - 플러그인 수동 추가 <br/>
 
