--- a/Unreal Engine/플러그인.md
+++ b/Unreal Engine/플러그인.md
@@ -21,11 +21,11 @@ https://unrealstudy.blogspot.com/2014/08/ue4.html <br/>
 ![image](https://github.com/user-attachments/assets/e26cfbb8-62ed-4e83-88f0-a13da0982d37) <br/>
 
 4) 프로젝트 실행하여 빌드 <br/>
-![image](https://github.com/user-attachments/assets/7acdab2a-3b26-42e2-8d0d-9d0dc60e2fbb)
+![image](https://github.com/user-attachments/assets/7acdab2a-3b26-42e2-8d0d-9d0dc60e2fbb) <br/>
 
-3-1) 플러그인이 추가되었는지 확인
-언리얼 엔진 편집기 -> 편집 -> 플러그인 -> 프로젝트 란에서 추가된 내용 확인
-![image](https://github.com/user-attachments/assets/7e2810e6-5235-480a-ab54-450921d902af)
+3-1) 플러그인이 추가되었는지 확인 <br/>
+언리얼 엔진 편집기 -> 편집 -> 플러그인 -> 프로젝트 란에서 추가된 내용 확인 <br/>
+![image](https://github.com/user-attachments/assets/7e2810e6-5235-480a-ab54-450921d902af) <br/>
 
 
 # 플러그인 생성
