--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -1,25 +1,39 @@
 # 라이브러리?
-프로그래밍에 사용할 수 있게 미리 만들어져 있는 함수나 변수들의 묶음이다.
+소프트웨어 개발에서 라이브러리는 특정 기능이나 동작을 수행하는 미리 작성된 코드의 집합체를 의미한다. <br/>
+이를 통해 개발자는 반복적인 코드 작성 없이 기존 코드를 재사용하여 개발 시간을 단축하고 코드 품질을 향상시킬 수 있다. <br/>
 
-#### 사용 이유
-코드 재사용
-코드의 내용을 숨겨 유출 방지
-컴파일 시간 단축
+#### 정적 라이브러리, 동적 라이브러리?
+빌드 시에 실행 파일에 포함되면 정적 라이브러리, 런타임에 불러오면 동적 라이브러리 <br/>
+정적 라이브러리는 실행 파일에 직접 포함되는 개념이기 떄문에 라이브러리 변경 시에 해당 라이브러리를 사용하는 모든 실행 파일은 
+새 라이브러리 파일을 사용해서 다시 빌드해야 하는 불편함이 있다.
 
-#### 라이브러리를 사용하는데 헤더 파일(.h)이 필요한 이유
-링커가 최종 실행 파일을 생성하기 위해 모든 함수의 심볼을 필요로 하는데 헤더 파일이 심볼을 생성하는 역할을 하기 때문이다.
+정적(Static) 라이브러리와 동적(Dynamic) 라이브러리 두 가지 형태가 있으며 차이를 결정하는 가장 큰 특징은 <br/> 
+프로그램과의 연결 시점(컴파일 or 런타임)과 공유 가능 여부라고 볼 수 있다. <br/>
+
+#### 정적 라이브러리 (Static, 윈도우-.lib, 리눅스-)
+컴파일 시에 실행 파일에 속하게 된다. <br/>
+A 프로그램에 aa 라이브러리가 사용되고, B 프로그램에도 aa 라이브러리가 사용된다면 A와 B 프로그램에 각각 빌드되어야 한다. <br/>
+
+#### 동적 라이브러리 (Dynamic, 윈도우-.dll, 리눅스-.so)
+실행 파일 외부에 별도 파일로 존재하며, 런타임 시에 연결된다. 라이브러리의 기능은 프로그램 자체에 속하지 않고 런타임 시에 메모리에 로드되어
+구현된다. <br/>
+A 프로그램에 aa 라이브러리가 사용되고, B 프로그램에도 aa 라이브러리가 사용된다면 하나의 aa 라이브러리로 공유하여 사용할 수 있다.
+암시적 링킹과 명시적 링킹이 무엇인지 
 
 
-# 정적 라이브러리
+# 정적 라이브러리 생성
+정적 라이브러리 프로젝트 생성
+정적 라이브러리 프로젝트 수정
+프로젝트에서 정적 라이브러리 불러오기
+1 프로젝트에 정적 라이브러리의 헤더 파일 포함시키기
+2 
+
+# 동적 라이브러리 생성
+동적 라이브러리 프로젝트 생성
+동적 라이브러리 프로젝트 수정
 
 
-#### 장점
-실행 파일이 정적 라이브러리를 복사해서 가지고 있으므로 실행할 때 라이브러리가 필요가 없음.
 
-#### 단점
-1) 실행 파일이 라이브러리 내용을 복사해서 가지고 있으므로 라이브러리를 변경하게 되면 해당 라이브러리를 사용하고 있는 프로젝트에서도 다시 컴파일 해야 한다.
-2) 실행 파일이 커진다.(라이브러리 크기 만큼)
-3) 같은 라이브러리를 가진 여러 프로그램이 동시에 실행될 경우 코드가 중복되어 메모리 자원을 낭비
-4) 정적 라이브러리 전체를 링킹하면서 사용하지 않는 함수들까지 전부 다 프로그램에 포함된다.
-
-# 동적 라이브러리
+# 출처
+https://ko.ittrip.xyz/c/c-static-dynamic-library-difference <br/>
+https://m.blog.naver.com/4roring/221518055774 <br/>
