Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -2,38 +2,54 @@
 소프트웨어 개발에서 라이브러리는 특정 기능이나 동작을 수행하는 미리 작성된 코드의 집합체를 의미한다. <br/>
 이를 통해 개발자는 반복적인 코드 작성 없이 기존 코드를 재사용하여 개발 시간을 단축하고 코드 품질을 향상시킬 수 있다. <br/>
 
-#### 정적 라이브러리, 동적 라이브러리?
-빌드 시에 실행 파일에 포함되면 정적 라이브러리, 런타임에 불러오면 동적 라이브러리 <br/>
-정적 라이브러리는 실행 파일에 직접 포함되는 개념이기 떄문에 라이브러리 변경 시에 해당 라이브러리를 사용하는 모든 실행 파일은 
-새 라이브러리 파일을 사용해서 다시 빌드해야 하는 불편함이 있다.
+# 정적 라이브러리, 동적 라이브러리?
+기본적으로 프로그램과의 연결 시점(컴파일 타임, 런타임)이 구분 기준 <br/>
 
-정적(Static) 라이브러리와 동적(Dynamic) 라이브러리 두 가지 형태가 있으며 차이를 결정하는 가장 큰 특징은 <br/> 
-프로그램과의 연결 시점(컴파일 or 런타임)과 공유 가능 여부라고 볼 수 있다. <br/>
+### 1. 정적 라이브러리 (Static, .lib(윈도우), .a(리눅스))
+실행 파일에 라이브러리 자체를 추가하는 방법 <br/>
+정적 링킹, 컴파일 시(컴파일 단계 중 링크 단계)에 라이브러리의 내용이 복사가 되어 실행 파일에 속하게 된다. <br/>
+실행 파일에 라이브러리 내용이 복사되어 들어가므로 실행 파일이 커지게 되지만, 실행 시에 라이브러리의 내용이 프로세스 내부 메모리 Code 영역에 할당되므로 별도로 필요한 것이 없다. <br/>
+정적 라이브러리의 내용이 수행될 때는 함수가 수행될 때와 마찬가지로 Stack 영역에 지역변수를 할당하면서 수행된다. <br/>
 
-#### 정적 라이브러리 (Static, 윈도우-.lib, 리눅스-)
-컴파일 시에 실행 파일에 속하게 된다. <br/>
-A 프로그램에 aa 라이브러리가 사용되고, B 프로그램에도 aa 라이브러리가 사용된다면 A와 B 프로그램에 각각 빌드되어야 한다. <br/>
+##### 동적과 비교 <br/>
+메모리와 저장 공간을 더 차지 <br/> 
+변경 사항이 있으면 컴파일(링킹)을 다시 해야한다. <br/>
+실행 시 필요한 내용이 내부에 다 있기 때문에 빠르며 별도의 파일이 필요치 않다.<br/>
 
-#### 동적 라이브러리 (Dynamic, 윈도우-.dll, 리눅스-.so)
-실행 파일 외부에 별도 파일로 존재하며, 런타임 시에 연결된다. 라이브러리의 기능은 프로그램 자체에 속하지 않고 런타임 시에 메모리에 로드되어
-구현된다. <br/>
-A 프로그램에 aa 라이브러리가 사용되고, B 프로그램에도 aa 라이브러리가 사용된다면 하나의 aa 라이브러리로 공유하여 사용할 수 있다.
-암시적 링킹과 명시적 링킹이 무엇인지 
+### 2. 동적 라이브러리 (Dynamic, .dll(윈도우), .so(리눅스))
+프로그램 실행 시 라이브러리가 메모리에 로드되는 방법 <br/>
+동적 링킹, 프로그램 실행 시(런타임) 독립적으로 존재하는 라이브러리를 링크, 로드 <br/>
+별도의 메모리 공간에 로드되고 해당 dll을 사용하는 여러 프로그램이 있으면 메모리를 공유한다. <br/>
+이때, 메모리에 이미 로드되어 있다면(다른 곳에서 사용중이라면) 라이브러리의 코드 영역을 공유해서 사용 <br/>
 
+##### 정적과 비교 <br/>
+실행 파일 크기가 작고 메모리 공간을 공유하므로 더 적게 사용 <br/>
+프로그램과 라이브러리의 연결 시간이 있기 때문에 느림 <br/>
 
-# 정적 라이브러리 생성
+##### 분류(암시적 링킹, 묵시적 링킹)
+프로그램 실행 시 로드하게 할 수 있고, 코드에서 호출할 타이밍을 명시하여 해당 타이밍에 호출하게 할 수 있다. <br/><br/>
+암시적 링킹(Implicit, 공유 라이브러리) <br/>
+실행 파일 자체에 사용할 DLL과 해당 DLL의 사용할 부분에 대한 정보를 포함, 프로그램 시작 시 로드 <br/><br/>
+명시적 링킹(Explicit, 동적 라이브러리) <br/> 
+프로그램 실행 중 API를 이용하여 DLL 파일이 있는지 확인 후 원하는 함수만 불러와서 사용 <br/>
+
+# 정적 라이브러리 실습(생성 후 사용법)
+요약 : 정적 라이브러리 생성 후 사용할 프로젝트에서 lib파일과 헤더파일을 추가해준다.
 정적 라이브러리 프로젝트 생성
 정적 라이브러리 프로젝트 수정
 프로젝트에서 정적 라이브러리 불러오기
 1 프로젝트에 정적 라이브러리의 헤더 파일 포함시키기
 2 
 
-# 동적 라이브러리 생성
+# 동적 라이브러리 실습(생성 후 사용법)
 동적 라이브러리 프로젝트 생성
 동적 라이브러리 프로젝트 수정
 
 
 
 # 출처
-https://ko.ittrip.xyz/c/c-static-dynamic-library-difference <br/>
-https://m.blog.naver.com/4roring/221518055774 <br/>
+https://ledpear.tistory.com/61 - 정적 라이브러리 설명 <br/>
+https://ledpear.tistory.com/62 - 동적 라이브러리 설명 <br/>
+- 실습 <br/>
+https://mydailylogs.tistory.com/56 - 추가 설명<br/>
+
