Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -27,7 +27,7 @@
 프로그램과 라이브러리의 연결 시간이 있기 때문에 느림 <br/>
 
 ##### 분류(암시적 링킹, 묵시적 링킹)
-프로그램 실행 시 로드하게 할 수 있고, 코드에서 호출할 타이밍을 명시하여 해당 타이밍에 호출하게 할 수 있다. <br/><br/>
+프로그램 실행할 때 로드하게 할 수 있고, 코드에서 호출할 타이밍을 명시하여 해당 타이밍에 호출하게 할 수 있다. <br/><br/>
 암시적 링킹(Implicit, 공유 라이브러리) <br/>
 실행 파일 자체에 사용할 DLL과 해당 DLL의 사용할 부분에 대한 정보를 포함, 프로그램 시작 시 로드 <br/><br/>
 명시적 링킹(Explicit, 동적 라이브러리) <br/> 
