Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -1,3 +1,6 @@
+라이브러리 설명, 라이브러리 실습
+<hr/>
+
 # 라이브러리?
 소프트웨어 개발에서 라이브러리는 특정 기능이나 동작을 수행하는 미리 작성된 코드의 집합체를 의미한다. <br/>
 이를 통해 개발자는 반복적인 코드 작성 없이 기존 코드를 재사용하여 개발 시간을 단축하고 코드 품질을 향상시킬 수 있다. <br/>
@@ -28,10 +31,24 @@
 
 ##### 분류(암시적 링킹, 묵시적 링킹)
 프로그램 실행할 때 로드하게 할 수 있고, 코드에서 호출할 타이밍을 명시하여 해당 타이밍에 호출하게 할 수 있다. <br/><br/>
-암시적 링킹(Implicit, 공유 라이브러리) <br/>
-실행 파일 자체에 사용할 DLL과 해당 DLL의 사용할 부분에 대한 정보를 포함, 프로그램 시작 시 로드 <br/><br/>
-명시적 링킹(Explicit, 동적 라이브러리) <br/> 
+1) 암시적 링킹(Implicit, 공유 라이브러리) <br/>
+실행 파일 자체에 사용할 DLL과 해당 DLL의 사용할 부분에 대한 정보를 포함, 프로그램 시작 시 로드 <br/>
+정적 라이브러리의 함수 호출과 유사 (헤더 파일 필요, #pragma comment(lib, "라이브러리 명") <br/>
+
+2) 명시적 링킹(Explicit, 동적 라이브러리) <br/> 
 프로그램 실행 중 API를 이용하여 DLL 파일이 있는지 확인 후 원하는 함수만 불러와서 사용 <br/>
+윈도우 API - LoadLibrary(), GetProcAddress(), FreeLibrary() <br/>
+리눅스 API - dlopen(), <br/>
+
+
+# 출처
+https://ledpear.tistory.com/61 - 정적 라이브러리 설명 <br/>
+https://ledpear.tistory.com/62 - 동적 라이브러리 설명 <br/>
+https://mydailylogs.tistory.com/56 - 추가 설명<br/>
+<br/><br/><br/><br/>
+<hr/>
+
+
 
 # 정적 라이브러리 실습(생성 후 사용법)
 요약 : 정적 라이브러리 생성 후 사용할 프로젝트에서 lib파일과 헤더파일을 추가해준다.
@@ -42,14 +59,45 @@
 2 
 
 # 동적 라이브러리 실습(생성 후 사용법)
-동적 라이브러리 프로젝트 생성
-동적 라이브러리 프로젝트 수정
+##### 명시적 링킹
+<table>
+<td valign="top">
+MyLib.h
+
+```c++
+class MyLib {
+public:
+  explicit MyLib();
+  virtual ~MyLib();
+
+public:
+  int GetTestNumber();
+};
+```
+
+</td>
+<td>
+MyLib.cpp
+  
+~~~c++
+#include "MyLib.h"
+
+extern "C" {
+  __declspec(dllexport) MyLib* create_component() { return new MyLib(); }
+  __declspec(dllexport) void destory_component(MyLib* obj) { delete obj; }
+  __declspec(dllexport) int get_test_number(MyLib* obj) { return obj->GetTestNumber(); }
+}
+
+MyLib::MyLib() {}
+MyLib::~MyLib() {}
+int MyLib::GetTestNumber() { return 100; }
+~~~
+
+</td>
+</table>
+
+##### 암시적 링킹
 
 
 
-# 출처
-https://ledpear.tistory.com/61 - 정적 라이브러리 설명 <br/>
-https://ledpear.tistory.com/62 - 동적 라이브러리 설명 <br/>
-- 실습 <br/>
-https://mydailylogs.tistory.com/56 - 추가 설명<br/>
-
+https://flower0.tistory.com/787 - 실습 <br/>
