Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -52,11 +52,14 @@ https://mydailylogs.tistory.com/56 - 추가 설명<br/>
 
 # 정적 라이브러리 실습(생성 후 사용법)
 요약 : 정적 라이브러리 생성 후 사용할 프로젝트에서 lib파일과 헤더파일을 추가해준다.
-정적 라이브러리 프로젝트 생성
-정적 라이브러리 프로젝트 수정
-프로젝트에서 정적 라이브러리 불러오기
-1 프로젝트에 정적 라이브러리의 헤더 파일 포함시키기
-2 
+
+헤더 파일 <br/>
+폴더 만들고 거기다가 헤더 파일 복사
+
+라이브러리(.lib) 추가 <br/>
+1) 프로젝트 속성에서 추가 종속성 추가
+2) #pragma comment(lib, "")로 추가
+
 
 # 동적 라이브러리 실습(생성 후 사용법)
 ##### 명시적 링킹
@@ -91,6 +94,32 @@ extern "C" {
 MyLib::MyLib() {}
 MyLib::~MyLib() {}
 int MyLib::GetTestNumber() { return 100; }
+~~~
+
+</td>
+</table>
+
+<table>
+<td>
+Main.cpp
+
+~~~c++
+#include<iostream>
+#include<windows.h>
+
+typedef void* (CreateFunc)();
+typedef void  (*DestoryFunc)(void*);
+typedef int   (*TestFunc)(void*);
+
+int main() {
+  // DLL 로드
+  handle = LoadLibrary(L"MyLib.dll");
+  if (handle == nullptr)
+    return 0;
+
+  // 함수 포인터 로드
+  reinterpret_cast<>(GetProcAddress(handle, ""));
+}
 ~~~
 
 </td>
