Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -126,7 +126,42 @@ int main() {
 </table>
 
 ##### 암시적 링킹
+<table>
+<td valign="top">
+TestClass.h
 
+```c++
+#pragma once
+
+extern "C" {
+  __declspec(dllexport) void Swap(int* a, int* b);
+
+  class __declspec(dllexport) TestClass {
+  public:
+    int func() { return 1; }
+  public:
+    int i;
+  };
+}
+```
+
+</td>
+<td valign="top">
+TestClass.cpp
+
+```c++
+#include "pch.h"
+#include "TestClass.h"
+
+void Swap(int* a, int* b) {
+  int tmp = *a;
+  *a = *b;
+  *b = tmp;
+}
+```
+
+</td>
+</table>
 
 
 https://flower0.tistory.com/787 - 실습 <br/>
