Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -40,11 +40,28 @@
 윈도우 API - LoadLibrary(), GetProcAddress(), FreeLibrary() <br/>
 리눅스 API - dlopen(), <br/>
 
+# 심화내용 (TODO : 정리 필요)
+dllimport, dllexport로 클래스를 선언하면 그 클래스 전체가 import, export 되며, 이렇게 export된 클래스를 exportable 클래스라 한다. <br/>
+exportable 클래스의 멤버는 dllimport와 dllexport를 명시적으로 사용할 수 없다. <br/>
+
+```c++
+#define DllExport __declspec(dllexport)
+
+class DllExport TestClass {
+  int func() { return 1; }
+
+  int i;
+};
+```
+
+dllexport 클래스는 모든 멤버함수와 정적 데이터 멤버가 export 되므로, 동일 프로그램 안에 모든 멤버를 정의해야 한다.
+그렇지 않으면 링크 에러가 발생한다. 단, 순수 가상 함수의 경우 예외이며, 
 
 # 출처
 https://ledpear.tistory.com/61 - 정적 라이브러리 설명 <br/>
 https://ledpear.tistory.com/62 - 동적 라이브러리 설명 <br/>
 https://mydailylogs.tistory.com/56 - 추가 설명<br/>
+https://elky.tistory.com/270 - 심화 설명 <br/>
 <br/><br/><br/><br/>
 <hr/>
 
