Update 정적, 동적 라이브러리.md

--- a/C++/정적, 동적 라이브러리.md
+++ b/C++/정적, 동적 라이브러리.md
@@ -40,7 +40,7 @@
 윈도우 API - LoadLibrary(), GetProcAddress(), FreeLibrary() <br/>
 리눅스 API - dlopen(), <br/>
 
-# 심화내용 (TODO : 정리 필요)
+### 심화내용 (TODO : 정리 필요)
 dllimport, dllexport로 클래스를 선언하면 그 클래스 전체가 import, export 되며, 이렇게 export된 클래스를 exportable 클래스라 한다. <br/>
 exportable 클래스의 멤버는 dllimport와 dllexport를 명시적으로 사용할 수 없다. <br/>
 
