Update 빈 파일 .md

--- a/C++/빈 파일 .md
+++ b/C++/빈 파일 .md
@@ -3,3 +3,50 @@
 
 네임스페이스 탭 방지<br/>
 출처 : https://if1live.github.io/posts/namespace-indent/ <br/>
+
+<hr/>
+
+# Producer, Consumer
+
+생산자, 소비자 패턴 - Producer, consumer <br/>
+이거를 할 때 고민해야할 것이 produce되는 것이 없을 때 consumer에서 busy waiting이 발생한다는 것. <br/>
+(BusyWaiting, 원하는 자원을 얻기 위해서 기다리는 것이 낭비라는 것이 아니라, 권한을 얻기 위해서 계속 체크하는 것으로 인한 낭비) <br/>
+해당 부분의 처리를 위해서 조건 변수(Condition Variable)을 사용한다는 것. <br/>
+
+```c++
+mutex _m;
+condition_variable _cv;
+queue<int> _q;
+
+void Producer() {
+  while (true) {
+    // 락 획득
+    _m.lock();
+
+    // 임계 영역 진입
+    _q.push();
+
+    // 락 해제
+    _m.unlock();
+
+    // notify
+    _cv.notify_one();
+  }
+}
+
+void Consumer() {
+  while (true) {
+    // notify && 조건 참
+    unique_lock<mutex> uLock(_m);
+    _cv.wait(uLock, [] () {});
+
+    // 임계 영역 진입
+    _q.pop();
+
+    // 락 해제
+    uLock.unlock();
+  }
+}
+
+```
+
