--- a/C++/컨테이너.md
+++ b/C++/컨테이너.md
@@ -30,10 +30,20 @@ int main() {
   myMap.insert(make_pair(2, "222 222"));
   myMap.insert(make_pair(2, "222 222 2"));
 
+  // upper_bound, lower_bound 이해
   // 출력 : 1, 111
   cout << "lower-1 : " << myMap.lower_bound(1)->first << ", " << myMap.lower_bound(1)->second << endl;
   // 출력 : 2, 222 222
   cout << "upper-1 : " << myMap.upper_bound(1)->first << ", " << myMap.upper_bound(1)->second << endl;
+
+  // equal_range 이해
+  // 출력 :
+  // 1, 111
+  // 1, 111 1
+  // 1, 111 11
+  auto range = myMap.equal_range(1);
+  for (auto it = range.first; it != range.second; it++)
+    cout << it->first << ", " << it->second << endl;
 }
 ```
 
