--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -1,7 +1,7 @@
 # Sqlite 튜토리얼
 
 ## Sqlite?
-MySQL 또는 PostgreSQL과 같은 RDBMS는 일반적으로 별도의 서버 프로세스를 실행해야 한다. <br/>
+MySQL 또는 PostgreSQL과 같은 일반적인 RDBMS는 별도의 서버 프로세스를 실행해야 한다. <br/>
 그 후 애플리케이션에서 TCP/IP 프로토콜을 사용하여 요청을 보내고 받는다. <br/>
 ![image](https://github.com/user-attachments/assets/ef33c0b4-2076-4ee9-bb39-1dbadbcad7e8) <br/><br/>
 Sqlite는 애플리케이션에 통합되어 애플리케이션에서 직접 데이터베이스 파일에 접근해서 사용한다. <br/>
