--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -8,19 +8,20 @@ Sqlite는 애플리케이션에 통합되어 애플리케이션에서 직접 데
 ![image](https://github.com/user-attachments/assets/f7341c65-91a2-418c-b39c-2386418fa5b7) <br/>
 주로 사용하는 환경 : 로컬 저장소, 개발 및 테스트 <br/>
 
-## C++에서 Sqlite 사용 예제
+## C++ Sqlite 사용
 ```c++
 #include<iostream>
 #include<sqlite3.h>
 #include<string>
 using namespace std;
+
 int main() {
   // 
   sqlite3* DB;
   string query;
   char* errorMsg;
 
-  // DB 연결
+  // DB 오픈
   int result = sqlite3_open("dbfile.db", &DB);
   if (result != 0) {
     cerr << "Error Open DB" << endl;
@@ -28,6 +29,12 @@ int main() {
   }
   cout << "Open Database Successfully" << endl;
 
+
+  /*--------------------------------------------------------------
+    sqlite3_exec()로 쿼리하는 방식
+    내부적으로 sqlite3_prepare -> sqlite3_step -> sqlite3_finalize의 과정을 거친다.
+    단일 명령 처리에는 사용하기 좋지만, 빠르고 연속적인 쿼리를 처리하기엔 오버헤드가 무시할 수 없다.
+  --------------------------------------------------------------*/
   // 테이블 생성
   query = "CREATE TABLE PERSON("
               "ID INT PRIMARY KEY NOT NULL,"
@@ -56,19 +63,18 @@ int main() {
     sqlite3_close(DB);
     
   }
+
+  /*--------------------------------------------------------------
+    sqlite3_prepare로 쿼리하는 방식
+    더 귀찮지만 쿼리의 재사용성을 높일 수 있다.
+  --------------------------------------------------------------*/
+  const char* query = "";
+  if (sqlite3_prepare_v2(db, query, -1, &))
 }
 ```
 
-```c++
-// 함수 원형들
-// DB 파일 열기
-sqlite3_open(const char* filename, sqlite3 **ppDb)
-// DB 파일 닫기
-sqlite3_close(sqlite3 *pDb)
-// SQL 실행
-sqlite3_exec(sqlite3*, const char* sql, sqlite_callback, void* data, char** errmsg)
-```
 
 출처 : <br/>
 https://www.sqlitetutorial.net/ <br/>
+https://mindgear.tistory.com/27 - <br/>
 <hr/><br/><br/>
