--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -10,9 +10,48 @@ Sqlite는 애플리케이션에 통합되어 애플리케이션에서 직접 데
 
 
 ## C++에서 Sqlite 사용
+### 기본적인 사용법
 ```c++
+int main() {
+  //
+  sqlite3* dbConn;
+  string query;
+  int result;
+  char* errMsg;
 
+  // DB 오픈
+  result = sqlite3_open("filename.db", &dbConn);
+  if (result != SQLITE_OK) {
+    cerr << "DB OPEN FAILED, CAUSE : " << sqlite3_errmsg(dbConn) << endl;
+    return 0;
+  }
+  cout << "DB OPEN OK" << endl;
+
+  // 테이블 생성
+  query = "CREATE TABLE STUDENT("
+        "ID INT PRIMARY KEY NOT NULL,"
+        "NAME TEXT NOT NULL,"
+        "EMAIL TEXT NOT NULL);";
+  result = sqlite_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
+  if (result != SQLITE_OK) {
+    // 테이블 생성 실패 - 에러 메시지 출력, 에러 메시지 할당 해제, DB 연결 해제
+    cerr << "CREATE TABLE FAILED, CAUSE : " << errMsg << endl;
+    sqlite3_free(errMsg);
+    sqlite3_close(dbConn);
+  }
+  cout << "CREATE TABLE STUDENT OK" << endl;
+
+  // 데이터 삽입
+  query = "INSERT INTO STUDENT (ID, NAME, )"
+}
 ```
+
+
+### 성능 고려
+sqlite3_exec()를 사용하는 것보다 sqlite3_prepare()를 사용하는 것이 좋다. <br/>
+
+### 함수 설명
+자세한 내용은 공식에서 매뉴얼을 보는 것이 좋다. <br/>
 
 사용할 때마다 컴파일하기 때문에 그냥 prepared로 사용하는게 컴파일 안하고 성능향상이란말
 
