--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -12,46 +12,123 @@ Sqlite는 애플리케이션에 통합되어 애플리케이션에서 직접 데
 ## C++에서 Sqlite 사용
 ### 기본적인 사용법
 ```c++
+int callback(void*, int, char**, char**);
+
 int main() {
   //
   sqlite3* dbConn;
-  string query;
   int result;
+  string query;
   char* errMsg;
 
-  // DB 오픈
+  /*-------------------------------------------------------
+    DB 오픈
+  -------------------------------------------------------*/
   result = sqlite3_open("filename.db", &dbConn);
   if (result != SQLITE_OK) {
-    cerr << "DB OPEN FAILED, CAUSE : " << sqlite3_errmsg(dbConn) << endl;
+    cerr << "DB OPEN FAILED, CAUSE:" << sqlite3_errmsg(dbConn) << endl;
     return 0;
   }
   cout << "DB OPEN OK" << endl;
 
-  // 테이블 생성
+  /*-------------------------------------------------------
+    테이블 생성
+  -------------------------------------------------------*/
   query = "CREATE TABLE STUDENT("
-        "ID INT PRIMARY KEY NOT NULL,"
-        "NAME TEXT NOT NULL,"
-        "EMAIL TEXT NOT NULL);";
-  result = sqlite_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
+    "ID INT PRIMARY KEY NOT NULL,"
+    "NAME TEXT NOT NULL,"
+    "EMAIL TEXT NOT NULL);";
+  result = sqlite3_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
   if (result != SQLITE_OK) {
-    // 테이블 생성 실패 - 에러 메시지 출력, 에러 메시지 할당 해제, DB 연결 해제
-    cerr << "CREATE TABLE FAILED, CAUSE : " << errMsg << endl;
+    // 테이블 생성 실패 - 에러 메시지 출력, 에러 메시지 할당 해제, DB 연결 해제, 프로그램 종료
+    cerr << "CREATE TABLE FAILED, CAUSE:" << errMsg << endl;
     sqlite3_free(errMsg);
     sqlite3_close(dbConn);
+    return 0;
   }
-  cout << "CREATE TABLE STUDENT OK" << endl;
+  cout << "CREATE TABLE OK" << endl;
 
-  // 데이터 삽입
-  query = "INSERT INTO STUDENT (ID, NAME, )"
+  /*-------------------------------------------------------
+    데이터 삽입
+  -------------------------------------------------------*/
+  query = "INSERT INTO STUDENT (ID, NAME, EMAIL) VALUES"
+    "(1, 'Jonh', 'john@email.com'),"
+    "(2, 'Peter', 'peter@email.com'),"
+    "(3, 'Homer', 'homer@email.com');";
+  result = sqlite3_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
+  if (result != SQLITE_OK) {
+    cerr << "INSERT FAILED, CAUSE:" << errMsg << endl;
+    sqlite3_free(errMsg);
+    sqlite3_close(dbConn);
+    return 0;
+  }
+  cout << "INSERT OK" << endl;
+
+  /*-------------------------------------------------------
+    데이터 삭제
+  -------------------------------------------------------*/
+  query = "DELETE FROM STUDENT WHERE ID = 2;";
+  result = sqlite3_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
+  if (result != SQLITE_OK) {
+    cerr << "DELETE FAILED, CAUSE:" << errMsg << endl;
+    sqlite3_free(errMsg);
+    sqlite3_close(dbConn);
+    return 0;
+  }
+  cout << "DELETE OK" << endl;
+
+  /*-------------------------------------------------------
+    업데이트
+  -------------------------------------------------------*/
+  query = "UPDATE STUDENT SET EMAIL = 'homerhomer@email.com' WHERE ID = 3;";
+  result = sqlite3_exec(dbConn, query.c_str(), NULL, 0, &errmsg);
+  if (result != SQLITE_OK) {
+    cerr << "UPDATE FAILED, CAUSE:" << errMsg << endl;
+    sqlite3_free(errMsg);
+    sqlite3_close(dbConn);
+    return 0;
+  }
+  cout << "UPDATE OK" << endl;
+
+  /*-------------------------------------------------------
+    데이터 검색    
+  -------------------------------------------------------*/
+  query = "SELECT * FROM STUDENT;";
+  result = sqlite3_exec(dbConn, query.c_str(), callback, 0, &errMsg);
+  if (result != SQLITE_OK) {
+    cerr << "SELECT FAILED, CAUSE:" << errMsg << endl;
+    sqlite3_free(errMsg);
+    sqlite3_close(dbConn);
+    return 0;
+  }
+  cout << "SELECT OK" << endl;
+  
+}
+
+// 데이터 검색(SELECT)에서 사용할 콜백함수 정의
+int callback(void* data, int count, char** argv, char** columnNames) {
+  for (int i = 0; i < count; i++)
+    cout << "Col : " << columnNames[i] << " = " << argv[i] << endl;
+
+  return 0;
 }
 ```
 
 
 ### 성능 고려
-sqlite3_exec()를 사용하는 것보다 sqlite3_prepare()를 사용하는 것이 좋다. <br/>
+1) sqlite3_exec()는 내부적으로 2) sqlite3_prepare(), sqlite3_step(), sqlite3_finalize()로 구성되어 있다. <br/>
+sqlite3_prepare로 사용할 때마다 컴파일하기 때문에 한 번 만들어놓고 계속 사용한다면 1안(sqlite3_exec)을 사용하기 보다
+2안을 사용하는 것이 좋다. 그 외에도 성능 향상을 위한 방법은 많고 아래 링크에서 성능 향상 링크를 참고하는 것이 좋다.
+```c++
+int main() {
+  
+}
+```
 
 ### 함수 설명
 자세한 내용은 공식에서 매뉴얼을 보는 것이 좋다. <br/>
+
+
 
 사용할 때마다 컴파일하기 때문에 그냥 prepared로 사용하는게 컴파일 안하고 성능향상이란말
 
