--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -32,6 +32,17 @@ int main() {
   cout << "DB OPEN OK" << endl;
 
   /*-------------------------------------------------------
+    테이블 제거(존재한다면)
+  -------------------------------------------------------*/
+  query = "DROP TABLE IF EXISTS STUDENT;";
+  result = sqlite3_exec(dbConn, query.c_str(), NULL, 0, &errMsg);
+  if (result != SQLITE_OK) {
+    cerr << "DB DROP FAILED, CAUSE:" << errMsg << endl;
+    sqlite3_free(errMsg);
+  }
+  cout << "DROP TABLE OK" << endl;
+
+  /*-------------------------------------------------------
     테이블 생성
   -------------------------------------------------------*/
   query = "CREATE TABLE STUDENT("
@@ -102,13 +113,19 @@ int main() {
     return 0;
   }
   cout << "SELECT OK" << endl;
-  
+
+  // 사용 끝
+  sqlite3_close(dbConn);
 }
 
-// 데이터 검색(SELECT)에서 사용할 콜백함수 정의
+/*-------------------------------------------------------
+  데이터 검색 (SELECT)에서 사용할 콜백함수 정의
+  검색된 row 마다 호출됨
+-------------------------------------------------------*/
 int callback(void* data, int count, char** argv, char** columnNames) {
   for (int i = 0; i < count; i++)
-    cout << "Col : " << columnNames[i] << " = " << argv[i] << endl;
+    cout << "Col : " << columnNames[i] << " = " << argv[i] << " ";
+  cout << endl;
 
   return 0;
 }
@@ -116,24 +133,74 @@ int callback(void* data, int count, char** argv, char** columnNames) {
 
 
 ### 성능 고려
-1) sqlite3_exec()는 내부적으로 2) sqlite3_prepare(), sqlite3_step(), sqlite3_finalize()로 구성되어 있다. <br/>
-sqlite3_prepare로 사용할 때마다 컴파일하기 때문에 한 번 만들어놓고 계속 사용한다면 1안(sqlite3_exec)을 사용하기 보다
-2안을 사용하는 것이 좋다. 그 외에도 성능 향상을 위한 방법은 많고 아래 링크에서 성능 향상 링크를 참고하는 것이 좋다.
+sqlite3_exec()는 내부적으로 sqlite3_prepare(), sqlite3_step(), sqlite3_finalize()로 구성되어 있다. <br/>
+sqlite3_prepare로 sql문을 컴파일하여 prepared statement(준비된 명령문)으로 만들고 sqlite3_step()으로 실행, <br/>
+sqlite3_finalize()로 해제한다. <br/>
+sqlite3_exec()를 호출할 때 마다 위의 과정을 거치게 되는데 동일한 쿼리를 여러번 한다면 <br/>
+위의 과정이 손해이기 때문에 sqlite3_exec()를 사용하는 것이 아니라 준비된 명령문을 만들어놓고 step만 사용하는 것이 좋다. <br/>
 ```c++
 int main() {
-  
+  //
+  sqlite3* dbConn;
+  string query;
+  sqlite3_stmt* stmt;
+  int result;
+
+  // DB 오픈
+  result = sqlite3_open("filename.db", &dbConn);
+  if (result != SQLITE_OK)
+    return 0;
+
+  // 사용할 쿼리를 prepared statement로 만들어 놓음
+  int result = sqlite3_prepare_v2(dbConn, query.c_str(), -1, &stmt, NULL);
+  if (result != SQLITE_OK) {
+    cerr << "ERROR, CAUSE:" << sqlite3_errmsg(dbConn) << endl;
+    sqlite3_close(dbConn);
+    return 0;
+  }
+
+  // Prepared Statement 실행 (SELECT의 경우 완료 시 SQLITE_DONE / 진행중 SQLITE_ROW 리턴)
+  while (sqlite3_step(stmt) == SQLITE_ROW) {
+    // 한 행씩 처리
+
+    // 칼럼 개수만큼
+    for (int i = 0; i < sqlite3_column_count(stmt); i++)
+      cout << "Col : " << sqlite3_column_name(stmt, i) << "=" << sqlite3_column_text(stmt, i) << " ";
+    cout << endl;
+  }
+
+  // Prepared Statement 초기화
+  sqlite3_finalize(stmt);
 }
 ```
 
 ### 함수 설명
 자세한 내용은 공식에서 매뉴얼을 보는 것이 좋다. <br/>
 
+#### sqlite3_prepare_v2()
+sqlite3_prepare()는 더 이상 사용되지 않고 v2를 사용해야한다. <br/>
+prepared_statement(준비된 명령문)를 만드는데 사용한다. <br/>
+```c++
+int sqlite3_prepare_v2(
+  sqlite3* db, // 데이터베이스 핸들
+  const char* zSql, // SQL 쿼리문(UTF8로 인코딩된)
+  int nByte, // SQL 쿼리문의 최대 길이, 음수이면 이 매개변수는 사용하지 않고, 양수일때 사용
+            //사용하는 것이 약간의 성능이점이 있다고함
+  sqlite3_stmt** ppStmt, // OUT, 컴파일된 Prepared Statement, 후에 sqlite3_step에 의해 실행
+  const char** pzTail // NULL이 아니라면, 쿼리 미사용부분 포인터
+)
+```
+#### int sqlite3_step(sqlite3_stmt*)
+준비된 명령문(Prepared Statement)을 실행 <br/>
+실행 결과를 반환 (SQLITE_BUSY, SQLITE_DONE, SQLITE_ROW, SQLITE_ERROR 등) <br/>
 
 
-사용할 때마다 컴파일하기 때문에 그냥 prepared로 사용하는게 컴파일 안하고 성능향상이란말
+
 
 출처 : <br/>
 https://izen8.tistory.com/289 <br/>
 https://medium.com/@duthujoe/sqlite-c-a-beginners-guide-243beb3fb3de <br/>
 https://mangsby.com/blog/programming/sqlite-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4%EB%A5%BC-10%EB%B0%B0-%EB%B9%A0%EB%A5%B4%EA%B2%8C-%EB%A7%8C%EB%93%9C%EB%8A%94-%EB%B0%A9%EB%B2%95/ - sqlite 성능 향상 <br/>
+https://www.sqlite.org/c3ref/step.html - sqlite 매뉴얼 <br/>
+https://github.com/wikibook/sqlite3/blob/master/2_4_5_sqlite3_CAPI_examples/CAPI_examples/sqlite3_capi_examples/sqlite3_capi_examples/capi_example_1.cpp - 깊게 사용하려면 <br/>
 <hr/><br/><br/>
