--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -178,23 +178,30 @@ int main() {
 자세한 내용은 공식에서 매뉴얼을 보는 것이 좋다. <br/>
 
 #### sqlite3_prepare_v2()
-sqlite3_prepare()는 더 이상 사용되지 않고 v2를 사용해야한다. <br/>
-prepared_statement(준비된 명령문)를 만드는데 사용한다. <br/>
 ```c++
-int sqlite3_prepare_v2(
-  sqlite3* db, // 데이터베이스 핸들
-  const char* zSql, // SQL 쿼리문(UTF8로 인코딩된)
-  int nByte, // SQL 쿼리문의 최대 길이, 음수이면 이 매개변수는 사용하지 않고, 양수일때 사용
-            //사용하는 것이 약간의 성능이점이 있다고함
-  sqlite3_stmt** ppStmt, // OUT, 컴파일된 Prepared Statement, 후에 sqlite3_step에 의해 실행
-  const char** pzTail // NULL이 아니라면, 쿼리 미사용부분 포인터
-)
+/*--------------------------------------------------------------------------------
+  Prepared Statement 생성
+  sqlite3_prepare()는 deprecated 되었으니 v2를 사용해야 한다. <br/>
+
+  sqlite3* db            데이터 베이스 핸들
+  const char* zSql       SQL 쿼리문 (UTF8 인코딩된)
+  int nByte              SQL 쿼리문 최대 길이, 음수면 사용X, 사용하는 것이 약간의 성능 이점이 있다고함
+  sqlite3_stmt** ppStmt  OUT, 컴파일된 Prepared Statement, sqlite3_step에 의해 실행
+  const char** pzTail    NULL이 아니라면 사용, 쿼리 미사용부분에 대한 포인터(?)
+--------------------------------------------------------------------------------*/
+int sqlite3_prepare_v2(sqlite3* db, const char* zSql, int nByte, sqlite3_stmt** ppStmt, const char** pzTail);
 ```
-#### int sqlite3_step(sqlite3_stmt*)
-준비된 명령문(Prepared Statement)을 실행 <br/>
-실행 결과를 반환 (SQLITE_BUSY, SQLITE_DONE, SQLITE_ROW, SQLITE_ERROR 등) <br/>
 
+#### int sqlite3_step()
+```c++
+/*--------------------------------------------------------------------------------
+  Prepared Statement 실행
+  실행 결과 반환 (SQLITE_BUSY, SQLITE_DONE, SQLITE_ROW, SQLITE_ERROR 등)
 
+  sqlite3_stmt* stmt    Prepared Statement (준비된 지시문)
+--------------------------------------------------------------------------------*/
+int sqlite3_step(sqlite3_stmt* stmt)
+```
 
 
 출처 : <br/>
