--- a/DB/Sqlite/시작.md
+++ b/DB/Sqlite/시작.md
@@ -1,12 +1,14 @@
 # Sqlite 튜토리얼
 
 ## Sqlite?
-MySQL 또는 PostgreSQL과 같은 일반적인 RDBMS는 별도의 서버 프로세스를 실행해야 한다. <br/>
-그 후 애플리케이션에서 TCP/IP 프로토콜을 사용하여 요청을 보내고 받는다. <br/>
-![image](https://github.com/user-attachments/assets/ef33c0b4-2076-4ee9-bb39-1dbadbcad7e8) <br/><br/>
+### 일반적인 DB 아키텍처
+MySQL, MSSQL, PostgreSQL과 같은 일반적인 RDBMS는 별도의 서버 프로세스를 실행하여 애플리케이션에서 TCP/IP 통신을 하여 작동한다 <br/>
+![image](https://github.com/user-attachments/assets/ef33c0b4-2076-4ee9-bb39-1dbadbcad7e8) 
+
+### Sqlite DB 아키텍처
 Sqlite는 애플리케이션에 통합되어 애플리케이션에서 직접 데이터베이스 파일에 접근해서 사용한다. <br/>
-![image](https://github.com/user-attachments/assets/f7341c65-91a2-418c-b39c-2386418fa5b7) <br/>
 주로 사용하는 환경 : 로컬 저장소가 필요한 환경, 개발 또는 테스트 시에 사용 <br/>
+![image](https://github.com/user-attachments/assets/f7341c65-91a2-418c-b39c-2386418fa5b7) <br/>
 
 
 ## C++에서 Sqlite 사용
