Update 저장 프로시저, 준비된 명령문.md

--- a/DB/저장 프로시저, 준비된 명령문.md
+++ b/DB/저장 프로시저, 준비된 명령문.md
@@ -1,35 +1,50 @@
-# 공통적인 특성
+# 공통적인 특성(이점)
 성능 향상, SQL 인젝션 방지 <br/>
 
 # 저장 프로시저 (Stored Procedure)
-SQL로 작성되고 DB 서버에 저장된다. <br/>
-그렇기에 DB에서 직접 액세스 가능하며, 클라이언트 앱(c++ 등)에서도 사용할 수 있다. <br/>
+SQL로 작성된 DB 서버 측 프로시저로 DB 서버에 저장된다. <br/>
+그렇기에 DB에서 직접 액세스 가능하며, 프로그래밍 언어(c++)를 사용하는 클라이언트 앱에서도 사용할 수 있다. <br/>
 
-장점1 : <br/>
-DB 서버에 저장된다는 것은 DB 서버와 클라이언트 응용프로그램 간의 네트워크 트래픽이 감소한다는 것이며 <br/>
-이는 주요 병목 시간 중 하나이다. <br/>
-장점2 : <br/>
-저장 프로시저를 사용하지 않으면 클라이언트 앱에서 DB 서버로 쿼리할 때 전체 텍스트 쿼리를 DB에 보내게 되는데 <br/>
-서버 측의 DB 드라이버는 쿼리 문이 호출될 때마다 구문 분석, 분석, 계획 및 최적화해야 한다. <br/>
-DB 엔진이 프로시저를 한 번 미리 컴파일하고 분석한 다음 캐시에 커밋하고 직접 실행할 수 있는 서버에 프로시저를 저장하는 것이 <br/>
-훨씬 효율적이다. <br/>
-장점3 : <br/>
-한 번 작성되면 어디서든 실행 <br/>
-프로그래머는 SQL로 작성하여 DB에 저장할 수 있다. 그러면 연결된 모든 클라이언트 프로그래밍 언어에서 사용하고 호출할 수 있다. <br/>
-이렇게 하면 개발 및 유지 관리가 보다 간소화되고 효율적이다. <br/>
-장점4 : <br/>
-저장 프로시저를 사용하는 주된 이유는 DB 보안 때문이다. <br/>
-저장 프로시저는 DB에 대한 사용자의 액세스를 분리하여 보안을 강화한다. <br/>
-예를 들어, 저장 프로시저를 실행하기 위해 execute 권한 이외의 액세스 권한이나 권한을 부여해야 하는 요구 사항은 없다. <br/>
+## 이점1
+서버 쪽 저장 프로시저는 일반적인 클라이언트 쪽 논리 처리에 비해 많은 이점을 제공한다. <br/>
+네트워크를 통해 이동하는 트래픽이 감소한다는 것인데, 이는 주요 병목 현상 중 하나이다. <br/>
+
+## 이점2
+클라이언트 측에서 전체 텍스트 쿼리를 보낼 경우 서버 측의 DB 드라이버는 쿼리 문이 호출될 때마다 <br/>
+파싱(parse), 분석(analyze), 계획(plan), 최적화(optimize) 등을 매번 해줘야 한다는 것인데 <br/>
+저장 프로시저를 사용할 경우 DB 엔진이 프로시저를 한 번 미리 컴파일하면 끝이다. <br/>
+
+## 이점3
+한 번 작성해놓으면 어디서든 실행가능하다는 것 <br/>
+저장 프로시저를 SQL로 작성하여 DB에 저장해놓으면 연결된 여러 클라이언트 프로그래밍 언어(java, c++)에서 사용할 수 있다. <br/>
+
+## 이점4
+보안 강화 <br/>
+저장 프로시저는 데이터베이스에 대한 사용자의 액세스를 분리하여 보안을 강화한다. <br/>
+예를 들어, 저장 프로시저를 실행하기 위해 execute 권한 이외의 액세스 권한이나 권한을 부여해야 하는 요구 사항은 없다.
 
 # 준비된 명령문
 종종 저장 프로시저와 혼동되는데, 이는 아마도 동일한 핵심 이점을 가지기 때문일 것이다. <br/>
-준비된 지시문과 저장 프로시저는 
 
 준비된 명령문은 세 가지 요소로 구성된다. <br/>
 prepare - 이름을 지정하여 실행할 문을 준비하고 수행할 SQL 쿼리를 정의한다. <br/>
 execute - 준비된 명령문을 실행하고 자리 표시자를 통해 변수를 전달한다. <br/>
 de-allocate - 준비된 명령문 및 리소스를 해제한다. <br/>
+
+<br/><br/>
+준비된 명령문 작동 방식 <br/>
+
+즉, 세션 중 첫 번째 쿼리에만 클라이언트가 서버에 SQL 쿼리의 전체문을 보내고 <br/>
+이후에는 클라이언트가 핸들과 변수만 전송한다 <br/>
+
+
+# 요약
+Prepared Statement와 Stored Procedure는 비슷한 성능과 보안상의 이점을 가진다. <br/>
+
+
+출처 : <br/>
+https://blog.udemy.com/sql-stored-procedure/ <br/>
+<hr/>
 
 
 
